<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.TicTacToe.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/Theme.TicTacToe.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="wrap_content"
        android:layout_height="402dp"
        android:layout_marginTop="60dp">

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="410dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="134dp">

                <ImageView
                    android:id="@+id/cell1"
                    android:layout_width="wrap_content"
                    android:layout_height="120dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="16dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/cell1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/orange_circle" />

                <ImageView
                    android:id="@+id/cell2"
                    android:layout_width="wrap_content"
                    android:layout_height="120dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="16dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/cell2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/orange_circle" />

                <ImageView
                    android:id="@+id/cell3"
                    android:layout_width="wrap_content"
                    android:layout_height="120dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="16dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/cell3"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/orange_circle" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="119dp">

                <ImageView
                    android:id="@+id/cell4"
                    android:layout_width="wrap_content"
                    android:layout_height="120dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="16dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/cell4"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/orange_circle" />

                <ImageView
                    android:id="@+id/cell5"
                    android:layout_width="wrap_content"
                    android:layout_height="120dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="16dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/cell5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/orange_circle" />

                <ImageView
                    android:id="@+id/cell6"
                    android:layout_width="wrap_content"
                    android:layout_height="120dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="16dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/cell6"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/orange_circle" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="134dp">

                <ImageView
                    android:id="@+id/cell7"
                    android:layout_width="wrap_content"
                    android:layout_height="120dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="16dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/cell7"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/orange_circle" />

                <ImageView
                    android:id="@+id/cell8"
                    android:layout_width="wrap_content"
                    android:layout_height="120dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="16dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/cell8"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/orange_circle" />

                <ImageView
                    android:id="@+id/cell9"
                    android:layout_width="wrap_content"
                    android:layout_height="120dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="16dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/cell9"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/orange_circle" />
            </TableRow>
        </TableLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>